# kpiexport3

./: .gitlab-ci.yml  README.md  app.css  app.less  index.html  package-lock.json  package.json
.github/workflows/: backend.yml  nginx.yml
infrastructure/k8s/: refresh-job.yaml
infrastructure/terraform/: .terraform.lock.hcl  main.tf
infrastructure/terraform/frontend/: main.tf
kpiexport/: Cargo.toml  Dockerfile
kpiexport/src/: config.rs  database.rs  e2e.rs  errors.rs  lib.rs  main.rs  rozklad.rs  rozklad_api.rs  rozklad_parser.rs  utils.rs
kpiexport/src/custom/: importer.rs
kpiexport/src/jobs/: mod.rs  refresh_groups.rs  refresh_schedule.rs
kpiexport/src/models/: groups.rs  mod.rs  schedule.rs  schedule_queries.rs  student.rs
kpiexport_frontend/: package-lock.json  package.json
kpiexport_frontend/nginx/: Dockerfile  nginx.conf
kpiexport_frontend/src/: App.tsx  app.css
kpiexport_frontend/src/components/: AuthIntroScreen.tsx  ErrorMessage.tsx  ExportFinishedScreen.tsx  ExportInProgressScreen.tsx  ExportInputScreen.tsx
less/: app.less  base.less  colors.less  progress.less
public/: index.html
src/: App.tsx  app.css  constants.ts  index.tsx  reducer.ts  store.ts  types.ts
src/components/: AuthIntroScreen.tsx  ExportFinishedScreen.tsx  ExportInProgressScreen.tsx  ExportInputScreen.tsx  index.ts
src/reducers/: group.ts
ts/: app.ts
