[package]
name = "kpiexport"
version = "0.1.0"
authors = ["Nikita Volobuev <nikitavbv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.6", features = ["json", "cookies"] }
openssl = { version = "0.10.29", features = ["vendored"] }
actix-rt = "1.1.1"
actix-web = "2.0.0"
custom_error = "1.7.1"
scraper = "0.12.0"
more-asserts = "0.2.1"
serde = "1.0.115"
serde_json = "1.0.57"
log = "0.4.8"
env_logger = "0.7.1"
prometheus = "0.9.0"
tokio-postgres = { version = "0.5.4", features = ["with-chrono-0_4"] }
lazy_static = "1.4.0"
serde_derive = "1.0.115"
chrono = "0.4.19"
levenshtein = "1.0.5"