[package]
name = "kpiexport"
version = "0.1.0"
authors = ["Nikita Volobuev <nikitavbv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["json", "cookies"] }
openssl = { version = "0.10.36", features = ["vendored"] }
actix-rt = "2.2.0"
actix-web = "4.0.0-beta.9"
custom_error = "1.7.1"
scraper = "0.12.0"
more-asserts = "0.2.1"
serde = "1.0.115"
serde_json = "1.0.57"
log = "0.4.8"
env_logger = "0.7.1"
prometheus = "0.9.0"
tokio-postgres = { version = "0.7.3", features = ["with-chrono-0_4"] }
lazy_static = "1.4.0"
serde_derive = "1.0.115"
chrono = "0.4.19"
levenshtein = "1.0.5"
translit = "0.5.0"
tokio = { version = "1.11.0", features = ["full"] }
async-recursion = "0.3.2"
refinery = "0.7.0"
